@@ -22,7 +22,7 @@ Usage: mwc.pl [-global <file>] [-include <directory>] [-recurse]
               [-gfeature_file <file name>]
               [-language <cplusplus | csharp | java | vb>]
               [-type <automake | bds | bmake | cc | em3 | ghs | html | make |
-                      nmake | sle | vc6 | vc7 | vc71 | vc8 | vc8web>]
+                      nmake | sle | vc6 | vc7 | vc71 | vc8>]
               [files]
 
        -base           Add <project> as a base project to each generated
