@@ -1,20 +1,0 @@
-package VC8WebProjectCreator;
-
-# ************************************************************
-# Description   : A VC8 Website Project Creator
-# Author        : James H. Hill
-# Create Date   : 6/7/2006
-# ************************************************************
-
-# ************************************************************
-# Pragmas
-# ************************************************************
-
-use strict;
-
-use VC8ProjectCreator;
-
-use vars qw(@ISA);
-@ISA = qw(VC8ProjectCreator);
-
-1;
